@@ -5,6 +5,12 @@
 	* m4/various.m4: use only gcc specific flags for gcc
 	* Jamrules.in:
 	* Jamrules: moving STDLIB to Jamrules; some warning flags for SunStudio
+	* Jamconfig.in: use CFLAGS var name instead CCFLAGS, which caused jam to
+	skip given flags for C code
+	* src/tinyscheme/scheme.c: initialize/mark sink; this caused very strange
+	crashes on SunStudio
+	* m4/various.m4: use '-g' if gcc wasn't detected
+	* src/tinyscheme/scheme.c: fix a warnings
 
 2009-09-24  Sanel <karijes@users.sourceforge.net>
 
